refactor: replace list access with getFirst() for improved readability in integration tests